--- a/Rapport/output.tex
+++ b/Rapport/output.tex
@@ -124,4 +124,14 @@ The coefficients for the discrete systems are the following:
 \end{center}
 
 \subsection{}%13
-The poles needs to be inside the unit cir
+The poles needs to be inside the unit circle for the system to be stable.
+
+\subsection{}%14
+The pole polynomial is
+	\begin{equation}
+		z^4+££d1*z^3+££d1*z^2+££d2*z +££d3
+	\end{equation}
+
+
+\end{document}
+
