--- a/Rapport/HW1.tex
+++ b/Rapport/HW1.tex
@@ -236,4 +236,18 @@ An input difference of 0-100 with a 10-bit A/D converter gives a quantization le
 \begin{equation}
 	\frac{100}{2^{10}} = 0.0977
 \end{equation}
+
+\subsection{}%19
+Yeah, we tried that...
+
+\subsection{}%20
+When a quantization level of NUMBER was used the control performance started to be degraded. This corresponds to a 6 bit A/D converter.
+
+FIGUR
+
 \end{document}
+
+
+
+
+
