--- a/Rapport/HW1.tex
+++ b/Rapport/HW1.tex
@@ -112,7 +112,8 @@
 \subsection{}%11
 Insert picture
 \subsection{}%12
-The coefficients for the discrete systems are the following:
+
+The coefficients for the discrete systems were derived by using the c2d command in MATLAB which transforms a continuous time system to a discrete time system. The coefficients are the following:
 \begin{center}
 	\begin{tabular}{| c | c | c | c |}
 	\hline
@@ -142,7 +143,7 @@ The pole polynomial is
 	\end{tabular}
 \end{center}
 
-\subsection{} %14
+\subsection{} %15
 We have the following closed loop system
 \begin{equation}
 	Gc(s) = \frac{F_dG_d}{1+F_dG_d}
