--- a/Rapport/HW1.tex
+++ b/Rapport/HW1.tex
@@ -80,21 +80,13 @@
   \fig{0.4}{con_zero_compare.png}{cont_zero_step}{Step response
   from the continuous controller and the ZOH}
   As seen in figure \ref{fig:cont_zero_step}, the system with the zero
-  order hold is a bit quicker although there is more overshoot.
+  order hold is a bit quicker although there is more overshoot. 
 
   \subsection{}%8
 
-  \fig{0.4}{zero_dis_comp_sample_1.png}{zoh_dis_comp_s1}{Step response
-  for ZOH compared to discrete controller with sample time 1}
-  When comparing the ZOH to the discrete controller with step size 1, will the ZOH give a
-  quicker system with more overshoot. The discrete controller will have
-  significantly longer settling time.\\
+When comparing the ZOH to the discrete controller with different sampling times the control performance decreases around a sampling time of five seconds. The system does not fulfil the requirements at five seconds but the system is still stable. This can be seen in Figure \ref{fig:ex8}. 
 
-  \fig{0.4}{zero_dis_comp_sample_2.png}{zoh_dis_comp_s2}{Step response
-  for ZOH compared to discrete controller with sample time 2}
-  When the sample size is increased to 2, there will be even larger
-  differences, the overshoot from the zero order hold will increase some
-  and the settling time for the discrete controller is much worse.
+	\fig{0.6}{ex8.png}{ex8}{Step response of ZOH and continuous system}
 
   \subsection{}%9
   If we allow a phase deterioration of $20\degree$ we can calculate the
@@ -108,7 +100,9 @@
   \end{equation}
 
 \subsection{}%10
+Around a sampling time of three oscillatory behaviour starts to show as seen in Figure \ref{fig:ex10}.
 
+\fig{0.6}{ex10.png}{ex10}{Step response of ZOH and continuous system with sampling time 3}
 \subsection{}%11
  The control performance is bad with a sampling time of 4 second which is shown in Figure \ref{fig:ex11}. 
  
