--- a/HW1/Rapport/HW1.tex
+++ b/HW1/Rapport/HW1.tex
@@ -1,7 +1,7 @@
 % vim:tw=72 sw=2 ft=tex
 %         File: HW1.tex
 % Date Created: 2016 Jan 20
-%  Last Change: 2016 Feb 02
+%  Last Change: 2016 Feb 08
 %     Compiler: pdflatex
 %       Author: Adam Lang & Gabriel Andersson Santiago
 
@@ -15,8 +15,9 @@
 
 \graphicspath{{pics/}}
 
-\title{Homework assignment Hello 1 - EL2450}
-\author{Adam Lang & Gabriel Andersson Santiago}
+\title{Homework assignment Homework - EL2450}
+\author{Adam Lang (861110-3956)& Gabriel Andersson Santiago
+(910706-4538)}
 
 \newcommand{\fig}[4]{
     \begin{figure}[!h]
@@ -28,7 +29,7 @@
 }
 \begin{document}
 
-%\maketitle
+\maketitle
 
 \section{Exercise 1}  
 
@@ -228,7 +229,7 @@ which is the same as in Question 11.
 \subsection{}%17
 Using the discrete designed controller instead of the transformed continuous controller improves the control of the system. This is probably due to the controller is designed for a discrete system and the poles have been placed to match the poles in the stable continuous system. Comparison can be seen in Figure \ref{fig:ex17}.
 
-\fig{0.6}{ex17.png}{ex17}{Comparison between discrete designed controller and the transformed continuous controller}
+\fig{0.4}{ex17.png}{ex17}{Comparison between discrete designed controller and the transformed continuous controller}
 
 \subsection{}%18
 An input difference of 0-100 with a 10-bit A/D converter gives a quantization level of
@@ -238,7 +239,7 @@ An input difference of 0-100 with a 10-bit A/D converter gives a quantization le
 
 \subsection{}%19
 The model in Simulink with quantizer blocks is shown in Figure \ref{fig:ex19}
-\fig{0.8}{ex19.png}{ex19}{Simulink model of the system with quantization blocks}
+\fig{0.6}{ex19.png}{ex19}{Simulink model of the system with quantization blocks}
 
 \subsection{}%20
 When a quantization level of 0.7813 was used the control performance started to be degraded. This corresponds to a 7 bit A/D converter.
