added ex3 to report

--- a/HW2/Report/HW2.tex
+++ b/HW2/Report/HW2.tex
@@ -44,17 +44,17 @@
     \begin{center}
       \begin{figure}
         \includegraphics[scale=0.5]{ex31.png}
-        \reference{fig:ex31}
-      \end{figure}
+        \lable{fig:ex31}
         \caption{Pendulum angles for the three different pendulums}
+      \end{figure}
     \end{center}
     
     \begin{center}
       \begin{figure}
         \includegraphics[scale=0.5]{ex32.png}
-        \reference{fig:ex32}
-      \end{figure}
+        \lable{fig:ex32}
       \caption{Control signal for pendulum}
+      \end{figure}
     \end{center}
 
     The pendulums are indeed stabilized. There is however a slight difference
