--- a/HW2/Report/HW2.tex
+++ b/HW2/Report/HW2.tex
@@ -257,9 +257,9 @@ The closed-loop system is given by
 $\dot{x} = Iu(kh)= -IKx(kh)$
 \end{center}
 We consider the Lyapunov function candidate $V(x)=IKx^2$. $V(x) >=0$ and is derivative along the closed loop system is
-\begin{center}
-$\dot{V}=2IKx\dot{x}=2Ikx(-IKx)$
-\end{center}
+\begin{equation}
+\dot{V}=2IKx\dot{x}=2Ikx(-IKx)
+\end{equation}
 
 The analytically calculated closed-loop equations are
 \begin{equation}
